--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     <div class="container1">
       <div class="subcont1">
         <div class="title">Welcome to our Lash-hub</div>
-        <div class="subtext">Here you can find out all about lash-lifts</div>
+        <div class="subtext">
+          Here you can find out all about lash-lifts, eyebrow lamination, tints
+          and our services
+        </div>
+        <button>Book Now</button>
       </div>
       <img src="" alt="Lashlifts logo image" />
     </div>
