created containers for container 2, including 4 images and four parargraph description placeholders

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lashes By Liv</title>
+    <title>Lash-Lifts By Liv</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -23,10 +23,24 @@
         </div>
         <button>Book Now</button>
       </div>
-      <img src="" alt="Lashlifts logo image" />
+      <img src="" alt="Lash-lifts logo image" />
     </div>
-    <div class="container2"></div>
+    <div class="container2">
+      <div class="title2">Look at the finished results</div>
+      <div class="results-images">
+        <img src="" alt="Lash-Lift image1" />
+        <img src="" alt="Lash-Lift image2" />
+        <img src="" alt="Eyebrow-Lamination image3" />
+        <img src="" alt="Tint image4" />
+      </div>
+      <div class="image-description">
+        <div class="p1">Lash-Lift</div>
+        <div class="p2">Lash-Lift</div>
+        <div class="p3">Eyebrow-Lamination</div>
+        <div class="p4">Tint</div>
+      </div>
+    </div>
     <div class="container3"></div>
-    <footer></footer>
+    <footer>Copyright (c) Lash-Lifts By Liv</footer>
   </body>
 </html>
