container 4 added with title, subtext and button, basic layout complete

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </header>
     <div class="container1">
       <div class="subcont1">
-        <div class="title">Welcome to our Lash-hub</div>
-        <div class="subtext">
+        <div class="title1">Welcome to our Lash-hub</div>
+        <div class="subtext1">
           Here you can find out all about lash-lifts, eyebrow lamination, tints
           and our services
         </div>
@@ -40,7 +40,20 @@
         <div class="p4">Tint</div>
       </div>
     </div>
-    <div class="container3"></div>
+    <div class="container3">
+      <div class="quote">Livs quote</div>
+      <div class="author">Olivia Dale</div>
+    </div>
+    <div class="container4">
+      <div class="subcont2">
+        <div class="title2">It's time to look makeup ready</div>
+        <div class="subtext2">
+          Click the button to book yourself your first appointment and get
+          aspecial discount
+        </div>
+      </div>
+      <button>Book Now</button>
+    </div>
     <footer>Copyright (c) Lash-Lifts By Liv</footer>
   </body>
 </html>
