added div class to links

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <img src="" alt="Lash-lifts logo image" />
     </div>
     <div class="container2">
-      <div class="title2">Look at the finished results</div>
+      <div class="title2">Look at these finished results</div>
       <div class="results-images">
         <img src="" alt="Lash-Lift image1" />
         <img src="" alt="Lash-Lift image2" />
@@ -42,7 +42,7 @@
     </div>
     <div class="container3">
       <div class="quote">Livs quote</div>
-      <div class="author">Olivia Dale</div>
+      <div class="author">-Olivia Dale</div>
     </div>
     <div class="container4">
       <div class="subcont2">
