--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   <body>
     <header>
       <div class="logo">Lash-Lifts By Liv</div>
-      <a href="">Lash-Lifts</a>
-      <a href="">Eyebrow-Lamination</a>
-      <a href="">Tints</a>
+      <div class="links">
+        <a href="">Lash-Lifts</a>
+        <a href="">Eyebrow-Lamination</a>
+        <a href="">Tints</a>
+      </div>
     </header>
     <div class="container1">
       <div class="subcont1">
