--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         </div>
         <button>Book Now</button>
       </div>
-      <img src="" alt="Lash-lifts logo image" />
+      <img src="lashl-liftlogo.jpg" alt="Lash-lifts logo image" />
     </div>
     <div class="container2">
       <div class="title2">Look at these finished results</div>
       <div class="results-images">
-        <img src="" alt="Lash-Lift image1" />
-        <img src="" alt="Lash-Lift image2" />
-        <img src="" alt="Eyebrow-Lamination image3" />
+        <img src="lash-lift1.jpg" alt="Lash-Lift image1" />
+        <img src="lash-lift2.jpg" alt="Lash-Lift image2" />
+        <img src="eyebrow-laminate.jpg" alt="Eyebrow-Lamination image3" />
         <img src="" alt="Tint image4" />
       </div>
       <div class="image-description">
