added class to individual images so that i can target size etc in css

--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
     <div class="container2">
       <div class="title2">Look at these finished results</div>
       <div class="results-images">
-        <img src="lash-lift1.jpg" alt="Lash-Lift image1" />
-        <img src="lash-lift2.jpg" alt="Lash-Lift image2" />
-        <img src="eyebrow-laminate.jpg" alt="Eyebrow-Lamination image3" />
-        <img src="" alt="Tint image4" />
+        <img src="lash-lift1.jpg" class="image-group" alt="Lash-Lift image1" />
+        <img src="lash-lift2.jpg" class="image-group" alt="Lash-Lift image2" />
+        <img
+          src="eyebrow-laminate.jpg"
+          class="image-group"
+          alt="Eyebrow-Lamination image3"
+        />
+        <img src="" class="image-group" alt="Tint image4" />
       </div>
       <div class="image-description">
         <div class="p1">Lash-Lift</div>
