added div class for background space

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
         </div>
         <button>Book Now</button>
       </div>
-      <img src="lashl-liftlogo.jpg" alt="Lash-lifts logo image" />
+      <img
+        src="lashl-liftlogo.jpg"
+        class="logo-image"
+        alt="Lash-lifts logo image"
+      />
     </div>
     <div class="container2">
       <div class="title2">Look at these finished results</div>
