aligned image within div and set size using flex

--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
         </div>
         <button>Book Now</button>
       </div>
-      <img
-        src="lashl-liftlogo.jpg"
-        class="logo-image"
-        alt="Lash-lifts logo image"
-      />
+      <div class="logo-space">
+        <img
+          src="lashl-liftlogo.jpg"
+          class="logo-image"
+          alt="Lash-lifts logo image"
+        />
+      </div>
     </div>
     <div class="container2">
       <div class="title2">Look at these finished results</div>
