--- a/index.html
+++ b/index.html
@@ -36,20 +36,36 @@
     <div class="container2">
       <div class="title2">Look at these finished results</div>
       <div class="results-images">
-        <img src="lash-lift1.jpg" class="image-group" alt="Lash-Lift image1" />
-        <img src="lash-lift2.jpg" class="image-group" alt="Lash-Lift image2" />
-        <img
-          src="eyebrow-laminate.jpg"
-          class="image-group"
-          alt="Eyebrow-Lamination image3"
-        />
-        <img src="" class="image-group" alt="Tint image4" />
+        <div class="multi-space">
+          <img
+            src="lash-lift1.jpg"
+            class="image-group"
+            alt="Lash-Lift image1"
+          />
+        </div>
+        <div class="multi-space">
+          <img
+            src="lash-lift2.jpg"
+            class="image-group"
+            alt="Lash-Lift image2"
+          />
+        </div>
+        <div class="multi-space">
+          <img
+            src="eyebrow-laminate.jpg"
+            class="image-group"
+            alt="Eyebrow-Lamination image3"
+          />
+        </div>
+        <div class="multi-space">
+          <img src="" class="image-group" alt="Tint image4" />
+        </div>
       </div>
       <div class="image-description">
-        <div class="p1">Lash-Lift</div>
-        <div class="p2">Lash-Lift</div>
-        <div class="p3">Eyebrow-Lamination</div>
-        <div class="p4">Tint</div>
+        <div class="descript">Lash-Lift</div>
+        <div class="descript">Lash-Lift</div>
+        <div class="descript">Eyebrow-Lamination</div>
+        <div class="descript">Tint</div>
       </div>
     </div>
     <div class="container3">
