button padding adjusted

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           />
         </div>
         <div class="multi-space">
-          <img src="" class="image-group" alt="Tint image4" />
+          <img src="lash-lift3.jpg" class="image-group" alt="Tint image4" />
         </div>
       </div>
       <div class="image-description">
@@ -74,7 +74,7 @@
     </div>
     <div class="container4">
       <div class="subcont2">
-        <div class="title2">It's time to look makeup ready</div>
+        <div class="title3">It's time to look makeup ready</div>
         <div class="subtext2">
           Click the button to book yourself your first appointment and get
           aspecial discount
