--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
       <div class="subcont1">
         <div class="title1">Welcome to our Lash-hub</div>
         <div class="subtext1">
-          Here you can find out all about lash-lifts, eyebrow lamination, tints
-          and our services
+          Hi there! I am Olivia Dale and I am a part-time lash magician. If you
+          are sick and tired of using an eyelash curler everyday and having
+          messy eyebrows, these services might be perfect for you. Here you can
+          find out all about lash-lifts, eyebrow lamination, tints and our
+          services
         </div>
         <button>Book Now</button>
       </div>
