fixed subcont height and display flex, to adjust for text volume, added div to button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
     </header>
     <div class="container1">
-      <div class="subcont1">
+      <div class="sub-cont1">
         <div class="title1">Welcome to our Lash-hub</div>
         <div class="subtext1">
           Hi there! I am Olivia Dale and I am a part-time lash magician. If you
@@ -26,7 +26,9 @@
           find out all about lash-lifts, eyebrow lamination, tints and our
           services
         </div>
-        <button>Book Now</button>
+        <div>
+          <button>Book Now</button>
+        </div>
       </div>
       <div class="logo-space">
         <img
