missed spelling error

--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
       <div class="sub-cont1">
         <div class="title1">Welcome to our Lash-hub</div>
         <div class="subtext1">
-          Hi there! I am Olivia Dale and I am a part-time lash magician. If you
-          are sick and tired of using an eyelash curler everyday and having
-          messy eyebrows, these services might be perfect for you. Here you can
-          find out all about lash-lifts, eyebrow lamination, tints and our
-          services
+          <p>
+            Hi there! I am Olivia Dale and I am a part-time lash magician. If
+            you are sick and tired of using an eyelash curler everyday and
+            having messy eyebrows, these services might be perfect for you. Here
+            on my website you can find out all about lash-lifts, eyebrow
+            lamination, tints and our services.
+          </p>
+          <p>Click the link below to book an appointment with me.</p>
         </div>
         <div>
           <button>Book Now</button>
@@ -81,8 +84,8 @@
       <div class="subcont2">
         <div class="title3">It's time to look makeup ready</div>
         <div class="subtext2">
-          Click the button to book yourself your first appointment and get
-          aspecial discount
+          Click the button to book yourself your first appointment and get a
+          special discount
         </div>
       </div>
       <button>Book Now</button>
