button div added so flex doesnt affect button

--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
           special discount
         </div>
       </div>
-      <button>Book Now</button>
+      <div>
+        <button>Book Now</button>
+      </div>
     </div>
     <footer>Copyright (c) Lash-Lifts By Liv</footer>
   </body>
