edit quote for impact

--- a/index.html
+++ b/index.html
@@ -77,8 +77,11 @@
       </div>
     </div>
     <div class="container3">
-      <div class="quote">Livs quote</div>
-      <div class="author">-Olivia Dale</div>
+      <div class="quote">
+        "I really do believe that having curled lashes is one of the quickest
+        ways to brighten and lift your entire face."
+      </div>
+      <div class="author">-Lisa Eldridge, Celebrity Makeup Artist</div>
     </div>
     <div class="container4">
       <div class="subcont2">
