--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
       </div>
       <div>
-        <button>Book Now</button>
+        <button class="specialbut">Book Now</button>
       </div>
     </div>
     <footer>Copyright (c) Lash-Lifts By Liv</footer>
